@@ -19,6 +19,7 @@ Copyright (c) 2005-2020 Alon Bar-Lev <alon.barlev@gmail.com>
    support adding properties without breaking API thanks to Михалицын Петр.
  * core: add initialization arguments property, thanks for Михалицын Петр.
  * session: respect login required token flag.
+ * certificate: respect always authenticate flag.
 
 2020-11-17 - Version 1.27
 
